content/openshift/yaml/dc-affinity.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  name: mysql
spec:
  replicas: 4
  selector:
    app: mysql
  template:
    metadata:
      name: mysql
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: registry.cmcc.com/rhscl/mysql-57-rhel7:latest
        ports:
          - containerPort: 3306
            name: mysql
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                - key: "region"
                  operator: In
                  values:
                    - r1
strategy:
  type: Rolling
