content/openshift/yaml/dc-antiaffinity.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  name: mysql
spec:
  replicas: 4
  selector:
    app: mysql
  template:
    metadata:
      name: mysql
      labels:
        app: mysql
      annotations:
        scheduler.alpha.kubernetes.io/affinity: |
          {
            "podAntiAffinity": {
              "requiredDuringSchedulingIgnoredDuringExecution": [{
                "labelSelector": {
                  "matchExpressions": [{
                    "key": "zone",
                    "operator": "In",
                    "values":["z1","z2"]
                  }]
                },
                "topologyKey": "kubernetes.io/hostname"
              }]
            }
          }
    spec:
      containers:
      - name: mysql
        image: registry.cmcc.com/rhscl/mysql-57-rhel7:latest
        ports:
          - containerPort: 3306
            name: mysql
  strategy:
    type: Rolling
